<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/home_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivExercise"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/exercise_image"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/albert_sans_semibold"
        android:textColor="@color/black_50"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/ivExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivExercise"
        app:layout_constraintTop_toTopOf="@id/ivExercise"
        tools:text="aslkhfajsfasjflajs;lfjas;fkjas;ldfjas;jfl;asjdf;alsdjf;alsjkdasdfasff" />

    <TextView
        android:id="@+id/labelBodyPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_bold"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textColor="@color/black_300"
        android:text="@string/body_part_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tvBodyPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_semibold"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textColor="@color/black_50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/view_holder"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="alskfjaslfj" />


    <TextView
        android:id="@+id/labelEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_bold"
        android:paddingHorizontal="12dp"
        android:textColor="@color/black_300"
        android:paddingVertical="4dp"
        android:text="@string/equipment_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBodyPart" />

    <TextView
        android:id="@+id/tvEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_semibold"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textColor="@color/black_50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/view_holder"
        app:layout_constraintTop_toBottomOf="@+id/tvBodyPart"
        tools:text="alskfjaslfj" />

    <TextView
        android:id="@+id/labelSecondaryMuscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_bold"
        android:textColor="@color/black_300"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:text="@string/secondary_muscles_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEquipment" />

    <TextView
        android:id="@+id/tvSecondaryMuscle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_semibold"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textColor="@color/black_50"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/view_holder"
        app:layout_constraintTop_toBottomOf="@+id/tvEquipment"
        tools:text="alskfjaslfj" />

    <TextView
        android:id="@+id/labelTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_bold"
        android:textColor="@color/black_300"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:text="@string/target_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSecondaryMuscle" />

    <TextView
        android:id="@+id/tvTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/category_title_bg"
        android:backgroundTint="@color/yellow_200"
        android:fontFamily="@font/albert_sans_semibold"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:textColor="@color/black_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/view_holder"
        app:layout_constraintTop_toBottomOf="@+id/labelSecondaryMuscle"
        tools:text="alskfjaslfj" />

    <View
        android:id="@+id/view_holder"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/labelSecondaryMuscle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelnfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/albert_sans_bold"
        android:text="@string/instructions"
        android:textColor="@color/black_300"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTarget" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelnfo">

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/albert_sans"
            android:textColor="@color/black_50"
            android:textSize="18sp"
            tools:text="askfjasf" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>